k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: todo-app

spec:
  type: ClusterIP

  selector:
    app: frontend

  ports:
  - port: 80
    targetPort: 80
