k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: todo-app-ingress
  namespace: todo-app

  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip

spec:
  rules:
  - http:
      paths:

      # -------------------------
      # Backend API routes
      # -------------------------
      - path: /api/*
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 8000

      # -------------------------
      # Frontend (React/nginx)
      # -------------------------
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: frontend-service
            port:
              number: 80
